--- a/data/styles/application.css
+++ b/data/styles/application.css
@@ -19,29 +19,14 @@
 * Authored by: Marius Meisenzahl <mariusmeisenzahl@gmail.com>
 */
 
-public class Application : Granite.Application {
-    private MainWindow window;
+.stack-switcher button {
+    background: none;
+    border: none;
+    box-shadow: none;
+    color: #666;
+    opacity: 0.4;
+}
 
-    public Application () {
-        Object (
-            application_id: Config.APP_ID,
-            flags: ApplicationFlags.FLAGS_NONE
-        );
-    }
-
-    protected override void activate () {
-        window = new MainWindow (this);
-
-        window.show_all ();
-
-        var css_provider = new Gtk.CssProvider ();
-        css_provider.load_from_resource ("com/github/manexim/home/styles/application.css");
-        Gtk.StyleContext.add_provider_for_screen (Gdk.Screen.get_default (), css_provider, Gtk.STYLE_PROVIDER_PRIORITY_APPLICATION);
-    }
-
-    public static int main (string[] args) {
-        var app = new Application ();
-
-        return app.run (args);
-    }
+.stack-switcher button:checked {
+    opacity: 1;
 }
